ActivityBasketStats completamente funcional con interacción con la BD